# laba

./: .gitignore  CMakeLists.txt
lab1/: CMakeLists.txt  build.bat
lab1/reference/: main.cpp
lab1/source/: main.cpp
lab2/: CMakeLists.txt
lab2/source/: funcs.cppm  main.cpp
lab3/: CMakeLists.txt
lab3/source/: main.cpp  menus.cppm  pawn.cppm
